--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,86 @@
 @import "~normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap");
 
 @import "_variables";
-@import "modules/hello.scss";
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 body {
-  background: $wtf;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-family: "Open Sans", sans-serif;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-color);
+  color:var(--text-color);
+}
+
+.background-image{
+  width:30%;
+}
+
+.main {
+  width: 60vw;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  &__main {
+    margin: 0 0 16px;
+    font-size: 44px;
+    font-weight: 600;
+    line-height: 64px;
+    font-style: normal;
+  }
+  &__isDark {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60px;
+    height: 26px;
+    border: none black;
+    border-radius: 12px 12px 12px 12px;
+  }
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  &__text {
+    min-width: 70%;
+    height: 40vh;
+  }
+}
+
+.footer{
+  display: flex;;
+  justify-content: flex-end;
+  align-items: flex-start;
+  height: 10vh;
+  width: 80%;
+  &__buttons{
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.button{
+  margin-top: 12px;
+  border: none;
+  border-radius: 4px;
+  padding: 2px 8px;
 }
