--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -70,9 +70,11 @@ body {
   display: flex;
   justify-content: center;
   &__text {
+    padding: 8px;
     min-width: 70%;
     height: 40vh;
     @media screen and (max-width: 600px) {
+      padding: 4px;
       height: 50vh;
       min-width: 80%;
     }
